tests/errors/tc_stmt_var_selfref.lx
@module "main"

pub const main -> fn () int {
    let x: int = x;
    return 0;
}
